form class created and rendered in template - login, register & item create

--- a/project_inventory/app_inventory/templates/items/create.html
+++ b/project_inventory/app_inventory/templates/items/create.html
@@ -7,5 +7,19 @@ Item | CREATE
 {% block body_content %}
 <div class="container">
     <h1>Item Create | INVENTORY</h1>
+    <hr>
+    <div class="card">
+        <div class="card-header">
+            <h4>Item Detail</h4>
+        </div>
+        <div class="card-body">
+            <form action="#">
+                {% csrf_token %}
+
+                {{ form.as_p }}
+                <input type="submit" class="btn btn-primary" value="ADD ITEM">
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
