--- a/project_inventory/app_inventory/templates/users/login.html
+++ b/project_inventory/app_inventory/templates/users/login.html
@@ -13,6 +13,20 @@
   <body>
     <div class="container">
         <h1>LOGIN | Inventory</h1>
+        <hr>
+        <div class="card">
+            <div class="card-header">
+                <h4>Login</h4>
+            </div>
+            <div class="card-body">
+                <form action="#">
+                    {% csrf_token %}
+
+                    {{ form.as_p }}
+                    <input type="submit" class="btn btn-primary" value="ADD ITEM">
+                </form>
+            </div>
+        </div>
     </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
