--- a/project_inventory/app_inventory/templates/users/register.html
+++ b/project_inventory/app_inventory/templates/users/register.html
@@ -19,7 +19,7 @@
                 <h4>Register</h4>
             </div>
             <div class="card-body">
-                <form action="#">
+                <form action="{% url 'users.register' %}" method="POST">
                     {% csrf_token %}
 
                     {{ form.as_p }}
