--- a/project_inventory/app_inventory/templates/users/register.html
+++ b/project_inventory/app_inventory/templates/users/register.html
@@ -14,6 +14,11 @@
     <div class="container">
         <h1>REGISTRATION | Inventory</h1>
         <hr>
+        {% if msg %}
+        <div class="alert alert-success" role="alert">
+            {{ msg }}
+        </div>
+        {% endif %}
         <div class="card">
             <div class="card-header">
                 <h4>Register</h4>
