items list, show & delete

--- a/project_inventory/app_inventory/templates/items/create.html
+++ b/project_inventory/app_inventory/templates/items/create.html
@@ -8,6 +8,7 @@ Item | CREATE
 <div class="container">
     <h1>Item Create | INVENTORY</h1>
     <hr>
+    <a href="{% url 'items.index' %}" class="btn btn-primary mb-2">BACK</a>
     {% if msg %}
     <div class="alert alert-success" role="alert">
         {{ msg }}
