--- a/project_inventory/app_inventory/templates/items/edit.html
+++ b/project_inventory/app_inventory/templates/items/edit.html
@@ -7,5 +7,42 @@ Item | EDIT
 {% block body_content %}
 <div class="container">
     <h1>Item Edit | INVENTORY</h1>
+    <a href="{% url 'items.index' %}" class="btn btn-primary mb-2">BACK</a>
+    <div class="card">
+        <div class="card-header">
+            <h3>Update Item</h3>
+        </div>
+        <div class="card-body">
+            <form action="{% url 'items.update' %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="id" value="{{ data.id }}">
+                <div class="form-group mb-2">
+                    <label for="title" class="mb-2">Title: </label>
+                    <input type="text" class="form-control" name="title" value="{{ data.title }}">
+                </div>
+                <div class="form-group mb-2">
+                    <label for="particular" class="mb-2">Particular: </label>
+                    <input type="text" class="form-control" name="particular" value="{{ data.particular }}">
+                </div>
+                <div class="form-group mb-2">
+                    <label for="lf" class="mb-2">LF: </label>
+                    <input type="text" class="form-control" name="lf" value="{{ data.lf }}">
+                </div>
+                <div class="form-group mb-2">
+                    <label for="quantity" class="mb-2">Quantity: </label>
+                    <input type="text" class="form-control" name="quantity" value="{{ data.quantity }}">
+                </div>
+                <div class="form-group mb-2">
+                    <label for="price" class="mb-2">Price: </label>
+                    <input type="text" class="form-control" name="price" value="{{ data.price }}">
+                </div>
+                <div class="form-group mb-2">
+                    <label for="total" class="mb-2">Total: </label>
+                    <input type="text" class="form-control" name="total" value="{{ data.total }}">
+                </div>
+                <input type="submit" class="btn btn-primary" value="UPDATE ITEM">
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
