email configuration and send via smtp

--- a/project_inventory/app_inventory/templates/users/register.html
+++ b/project_inventory/app_inventory/templates/users/register.html
@@ -28,7 +28,7 @@
                     {% csrf_token %}
 
                     {{ form.as_p }}
-                    <input type="submit" class="btn btn-primary" value="ADD ITEM">
+                    <input type="submit" class="btn btn-primary" value="REGISTER">
                 </form>
             </div>
         </div>
