static file load

--- a/project_inventory/app_inventory/templates/items/index.html
+++ b/project_inventory/app_inventory/templates/items/index.html
@@ -1,7 +1,11 @@
 {% extends "layouts/base.html" %}
-
+{% load static %}
 {% block title %}
 Item | INDEX
+{% endblock %}
+
+{% block custom_css %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 
 {% block body_content %}
@@ -49,4 +53,8 @@ Item | INDEX
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block custom_js %}
+<script src="{% static 'js/script.js' %}"></script>
 {% endblock %}
